--- a/style.css
+++ b/style.css
@@ -3,5 +3,7 @@
 body {background-color:#cceeff
 }
 
-h1 {font-size: 4rem; font-family: Palationo, 'Palatino Linotype', serif; color:rgb(46,105,163);
+h1 {font-size: 4rem; font-family: Georgia, serif; color:rgb(46,105,163);
 }
+
+.btn {margin:1rem;}
