--- a/style.css
+++ b/style.css
@@ -3,7 +3,30 @@
 body {background-color:#cceeff
 }
 
-h1 {font-size: 4rem; font-family: Comic Sans MS, Comic Sans, cursive; color:rgb(46,105,163);
+Header {
+font-size: 4rem; font-family: Comic Sans MS, Comic Sans, cursive; color:rgb(46,105,163);
+margin-top:60px;
+margin-bottom:60px;
+}
+
+
+section {
+position: relative;
+/*border:3px solid #2D3FA3;*/
+margin-bottom: 60px;
+margin-top: 60px;
 }
 
 .btn {margin:1rem;}
+
+div {
+margin-bottom: 60px;
+margin-top: 60px;
+}
+
+footer {
+display:flex;
+align-item: center;
+}
+
+
